--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "z-nodejs-core",
-  "version": "1.0.0",
+  "name": "@zurckz/nodejs-ms-core",
+  "version": "1.0.3",
   "description": "Core layer for fast and productive building of microservices",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,25 +9,36 @@
     "test": "node main.js"
   },
   "dependencies": {
-    "aws-serverless-express": "^3.4.0",
+    "cors": "^2.8.5",
+    "exit-hook": "^3.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "morgan-body": "^2.6.6",
     "neo4j-driver": "^4.1.1",
     "parse-neo4j": "^0.6.11",
     "tslog": "^3.2.2"
   },
   "repository": {
     "type": "git",
-    "url": "z-nodejs-core"
+    "url": "https://github.com/NoeCruzMW/z-nodejs-ms-core"
   },
   "keywords": [
     "core",
-    "layer"
+    "layer",
+    "nodejs",
+    "microservice",
+    "aws-lambda"
   ],
-  "author": "Noe Cruz | Zurck'z 21 | https://www.linkedin.com/in/zurckz/",
+  "author": "Noe Cruz | Zurck'z 21  <https://www.linkedin.com/in/zurckz>",
   "contributors": [],
-  "homepage": "",
+  "homepage": "https://github.com/NoeCruzMW/z-nodejs-ms-core/blob/main/README.md",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
+    "nodemon": "^2.0.14",
     "typescript": "^4.4.4"
   }
 }
