--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
-        "target": "ES2021",
+        "target": "ES6",
         "module": "CommonJS",
         "declaration": true,
         "outDir": "./dist",
         "strict": true,
-        "sourceMap": true
+        "sourceMap": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true 
     }
 }
